--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
+    "@types/nodemailer": "^7.0.4",
     "@types/pg": "^8.15.6",
     "argon2": "^0.44.0",
     "cors": "^2.8.5",
@@ -37,6 +38,7 @@
     "express": "^5.1.0",
     "http-status": "^2.1.0",
     "jwt-decode": "^4.0.0",
+    "nodemailer": "^7.0.11",
     "pg": "^8.16.3",
     "uuid": "^13.0.0"
   }
