Enhance project structure and functionality; update package.json with new scripts for production, migration, and testing. Refactor tsconfig for improved module resolution and target settings. Modify Prisma schema to include slug and timestamps for categories and subcategories. Expand user and category services with CRUD operations and integrate global error handling in app. Update routes and controllers for categories to support full RESTful API functionality.

--- a/package.json
+++ b/package.json
@@ -7,9 +7,18 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "supper_admin": "tsx src/app/modules/supperAdmin/supper_admin.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "prod": "NODE_ENV=production node ./dist/server.js",
+    "migrate": "npx prisma migrate dev",
+    "generate": "prisma generate",
+    "studio": "npx prisma studio",
+    "validate": "npx prisma validate",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "rename-module": "npx ts-node --transpile-only src/scripts/renameModule.ts",
+    "create-module": "tsx src/scripts/createModule.ts"
   },
   "keywords": [],
   "author": "",
